# apps/windows/tests/Brasscribe.Play.Core.Tests/Fixtures/openapi.json
@@ -282,7 +282,8 @@
                   "euphonium",
                   "eb-bass",
                   "bb-bass",
-                  "percussion"
+                  "percussion",
+                  "trumpet"
                 ],
                 "type": "string"
               },
@@ -1252,7 +1253,8 @@
                   "euphonium",
                   "eb-bass",
                   "bb-bass",
-                  "percussion"
+                  "percussion",
+                  "trumpet"
                 ],
                 "type": "string"
               },
